# satchel

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
crates/satchel/: Cargo.toml
crates/satchel-macro/: Cargo.toml  README.md
crates/satchel-macro/src/: lib.rs
crates/satchel/src/: lib.rs
crates/satchel/tests/: compile_fail.rs  pass.rs
crates/satchel/tests/compile_fail/: common.rs  ignore_unsupported_forms.rs  ignore_unsupported_forms.stderr  should_panic_unsupported_forms.rs  should_panic_unsupported_forms.stderr
crates/satchel/tests/pass/: should_panic_forms.rs  should_panic_raw_string.rs
examples/ctest-integration/: CMakeLists.txt  CMakePresets.json  Cargo.toml  main.cpp
examples/ctest-integration/otherlib/: Cargo.toml
examples/ctest-integration/otherlib/src/: lib.rs
examples/ctest-integration/somelib/: Cargo.toml
examples/ctest-integration/somelib/src/: lib.rs
examples/ctest-integration/src/: lib.rs
examples/rust-examples/minimal_mimic_harness/: Cargo.toml
examples/rust-examples/minimal_mimic_harness/src/: main.rs  tests.rs
examples/rust-examples/satchel-demo/: Cargo.toml
examples/rust-examples/satchel-demo/src/: lib.rs
examples/rust-examples/satchel-demo/tests/: satchel_demo.rs
examples/rust-examples/satchel_harness_demo/: Cargo.toml
examples/rust-examples/satchel_harness_demo/src/: lib.rs  main.rs
examples/test-runner/: Cargo.toml
examples/test-runner/src/: lib.rs
src/: lib.rs  main.rs
