[package]
name = "satchel-macro"
version = "0.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KDAB/satchel"
edition = "2024"
description = "Procedural macros for satchel, enabling ergonomic test registration and discovery."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
