[package]
name = "satchel"
version = "0.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KDAB/satchel/"
edition = "2024"
description = "Test registration and discovery crate. Satchel uses linkme for test registration and exposes APIs for test discovery."

[dependencies]
linkme = "0.3"
satchel-macro = { path = "../satchel-macro" }

[dev-dependencies]
trybuild = "1"

